--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: GG
+subtitle: 경기과학기술대학교 게임동아리
 use-site-title: true
 ---
 
