메인페이지 작업

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 ---
 layout: page
-title: 
 use-site-title: true
 ---
+<center><img src="/img/mainimg.png"></center>
 
-![GG](/img/mainimg.png)
 
+<h1>나머지 내용은 나중에 채워넣자</h1>
 
-# 나머지 내용은 나중에 채워넣자
-
-치킨먹고싶다
+<p>치킨먹고싶다</p>
