메인페이지 작업

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@ use-site-title: true
 <center><img src="/img/mainimg.png"></center>
 
 
-<h1>나머지 내용은 나중에 채워넣자</h1>
-
-<p>치킨먹고싶다</p>
+<div style="width: 49%; float: left; border: 1px solid transparent; border-radius: 2px; background: #D2D2D2; height: 100%; line-height: 35px;">
+    <center>
+    <span style="font-size: 32px;">나머지 내용은 나중에 채워넣자</span>
+    </center>
+    </div>
+    <div style="width: 50%; float: right; border: 1px solid transparent; border-radius: 2px; background: #D2D2D2; height: 100%;">
+    <center>
+    <span style="font-size: 32px;">치킨먹고싶다</span>
+    </center>
+</div>
