--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ use-site-title: true
 <center><img src="/img/mainimg.png"></center>
 
 
-<div style="width: 49%; float: left; border: 1px solid transparent; border-radius: 10px; background: #D2D2D2; height: 100%; line-height: 35px;">
+<div style="width: 49%; float: left; border: 1px solid transparent; border-radius: 10px; background: #D2D2D2; height: 100%; line-height: 100px;">
     <center>
     <span style="font-size: 32px;">나머지 내용은<br>나중에 채워넣자</span>
     </center>
     </div>
-    <div style="width: 50%; float: right; border: 1px solid transparent; border-radius: 10px; background: #D2D2D2; height: 100%;">
+    <div style="width: 50%; float: right; border: 1px solid transparent; border-radius: 10px; background: #D2D2D2; height: 100%; line-height: 100px;">
     <center>
     <span style="font-size: 32px;">치킨먹고싶다<br>치킨사줘</span>
     </center>
