--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ use-site-title: true
 ---
 <center><img src="/img/mainimg.png"></center>
 
-
+<div style="width: 100%; height: 150px; margin-bottom: 1%;">
 <div style="width: 49%; float: left; border: 1px solid transparent; border-radius: 10px; background: #D2D2D2; height: 100%; line-height: 100px;">
     <center>
     <span style="font-size: 32px;">나머지 내용은<br>나중에 채워넣자</span>
@@ -14,4 +14,5 @@ use-site-title: true
     <center>
     <span style="font-size: 32px;">치킨먹고싶다<br>치킨사줘</span>
     </center>
+</div>
 </div>
