--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ use-site-title: true
 ---
 <center><img src="/img/mainimg.png" width="600"></center>
 
-<h1>GG 활동</h1>
+<h1>GG의 활동</h1>
 
 <div class="posts-list">
     {% for post in paginator.posts %}
