메인페이지

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@ use-site-title: true
 ---
 <center><img src="/img/mainimg.png" width="600"></center>
 
+<h1>Good Game에 오신것을 환영합니다</h1>
+여기에 동아리에대한 간략한 소개와 회장 인삿말을 적으면 됨
+
 <h1>GG의 활동</h1>
 
 <div class="posts-list">
