--- a/404.html
+++ b/404.html
@@ -5,7 +5,8 @@ permalink: /404.html
 ---
 
 <div class="text-center">
-  <h1>페이지를 찾을 수 없습니다.</h1>
+  <h1>앗! 페이지를 찾을수가 없네요</h1>
   <h1>404 error</h1>
-  <br/>
+  <br>
+  <img src="/img/mainimg.png" width="600">
 </div>
