--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ use-site-title: true
 <center><img src="/img/mainimg.png" width="600"></center>
 
 <h1>Good Game에 오신것을 환영합니다</h1>
-여기에 동아리에대한 간략한 소개와 회장 인삿말을 적으면 됨
+ 안녕하세요! 저희 G.G 동아리는 각종 게임을 즐겨하고, 자격증 취득과 봉사활동, 교내 행사 및 게임관련 대회참가를 목적으로 하고 있습니다.
 <br><br>
 
 <h1>GG의 활동</h1>
