메인페이지에 가입신청

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@ use-site-title: true
 
 <h1>Good Game에 오신것을 환영합니다</h1>
  안녕하세요! 저희 G.G 동아리는 각종 게임을 즐겨하고, 자격증 취득과 봉사활동, 교내 행사 및 게임관련 대회참가를 목적으로 하고 있습니다.
-<br><br>
+<br>
+<div style="text-align:left">
+  <a href="/join">가입 신청</a>
+</div>
+<br>
 
 <h1>G.G의 활동</h1><hr>
 <div class="posts-list">
