--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ use-site-title: true
 <h1>Good Game에 오신것을 환영합니다</h1>
  안녕하세요! 저희 G.G 동아리는 각종 게임을 즐겨하고, 자격증 취득과 봉사활동, 교내 행사 및 게임관련 대회참가를 목적으로 하고 있습니다.
 <br>
-<div style="text-align:left">
+<div style="text-align:right">
   <a href="/join">가입 신청</a>
 </div>
 <br>
