가입신청 볼드체

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ use-site-title: true
 안녕하세요! 저희 G.G 동아리는 각종 게임을 즐겨하고, 자격증 취득과 봉사활동, 교내 행사 및 게임 관련 대회 참가를 목적으로 하고 있습니다.
 <br>
 <div style="text-align:right">
-  <a href="/join">가입 신청</a>
+  <a href="/join"><b> 가입 신청 </b></a>
 </div>
 <br>
 
